--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charser="UTF-8">
 	<title>HTML, CSS & Git Basics</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi maiores earum rem facere sint, provident tenetur harum eveniet eius ullam qui 
