--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charser="UTF-8">
-	<title>HTML, CSS & Git Basics</title>
+	<title>HTML, CSS &amp Git Basics</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
