--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 	<meta charser="UTF-8">
-	<title>HTML, CSS &amp Git Basics</title>
+	<title>HTML,CSS,Git,Basics</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi maiores earum rem facere sint, provident tenetur harum eveniet eius ullam qui 
-		ex in, pariatur ducimus nostrum quod ad, obcaecati accusamus?</p>
+	<p>Lorem</p>
 </body>
 </html>
