--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charser="UTF-8">
-	<title>HTML,CSS,Git,Basics</title>
+	<title>cv</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="./assets/img/icon-cv.ico">
 </head>
 <body>
 	<p>Lorem</p>
