--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@ else return prev.concat(item)
 		</div>
 	</main>
 	<footer class="footer">
-		<div class="container"></div>
+		<div class="container footer-container">
+			<div>
+				2022
+				<a href="https://github.com/Potitanem" class="github nav-link">Potitanem</a>
+			</div>
+			<a href="https://rs.school/js-stage0/" class="rss"></a>
+		</div>
 	</footer>
 </body>
 </html>
