--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav class="nav">
 				<ul class="nav-list">
 					<li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-					<li class="nav-item"><a href="#about me" class="nav-link">About Me</a></li>
+					<li class="nav-item"><a href="#about-me" class="nav-link">About Me</a></li>
 					<li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
 					<li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
 					<li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
@@ -50,7 +50,7 @@
 						<a href="https://discordapp.com/users/Juba#2187/" title="discord">Juba#2187</a></li>
 				</ul>
 			</section>
-			<section class="section" id="about me">
+			<section class="section" id="about-me">
 				<h2 class="section-title">About Me</h2>
 				<p>
 					Hard-working and disciplined with good communication and time management skills. I'm
