refactor: formatting code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>cv</title>
-	<meta charser="UTF-8">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="./assets/img/icon-cv.ico">
 </head>
